toml/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ACH
    ATC
    ATO
    BIN
    FCH
    HEX
    INF
    NAN
    OCT
    PLUS
    TIME_DELIM
    TWODOT_SEP
    UNDERSC0RE

Grammar

Rule 0     S' -> TOML
Rule 1     TOML -> TITLES GROUPS
Rule 2     TITLES -> KVALUE EXPRESSION TITLES
Rule 3     TITLES -> <empty>
Rule 4     GROUPS -> SECCAO EXPRESSION GROUPS
Rule 5     GROUPS -> <empty>
Rule 6     SECCAO -> TABLE EXPRESSION ATRIBUICOES
Rule 7     SECCAO -> <empty>
Rule 8     ATRIBUICOES -> KVALUE EXPRESSION ATRIBUICOES
Rule 9     ATRIBUICOES -> <empty>
Rule 10    EXPRESSION -> COMMENT EXPRESSION
Rule 11    EXPRESSION -> NEWLINE EXPRESSION
Rule 12    EXPRESSION -> <empty>
Rule 13    KVALUE -> KEY kvwhitespace IGUAL kvwhitespace VALUE
Rule 14    kvwhitespace -> WHITESPACE
Rule 15    kvwhitespace -> <empty>
Rule 16    KEY -> SIMPLEKEY
Rule 17    KEY -> DOTKEY
Rule 18    SIMPLEKEY -> QUOTEDKEY
Rule 19    SIMPLEKEY -> UNQUOTEDKEY
Rule 20    UNQUOTEDKEY -> OCCURRENCES UNQUOTEDKEYAUX
Rule 21    UNQUOTEDKEYAUX -> OCCURRENCES UNQUOTEDKEYAUX
Rule 22    UNQUOTEDKEYAUX -> <empty>
Rule 23    OCCURRENCES -> CHAR
Rule 24    OCCURRENCES -> INTEGER
Rule 25    OCCURRENCES -> MINUS
Rule 26    OCCURRENCES -> UNDERSCORE
Rule 27    QUOTEDKEY -> BASICSTRING
Rule 28    QUOTEDKEY -> LITERALSTRING
Rule 29    DOTKEY -> SIMPLEKEY DOT_SEP SIMPLEKEY DOTSIMPKEY
Rule 30    DOTSIMPKEY -> DOT_SEP SIMPLEKEY DOTSIMPKEY
Rule 31    DOTSIMPKEY -> <empty>
Rule 32    VALUE -> STRING
Rule 33    VALUE -> BOOLEAN
Rule 34    VALUE -> INTEGER
Rule 35    VALUE -> ARRAY
Rule 36    VALUE -> DATETIME
Rule 37    DATETIME -> OFFSETDATETIME
Rule 38    DATETIME -> LOCALDATETIME
Rule 39    DATETIME -> LOCALDATE
Rule 40    DATETIME -> LOCALTIME
Rule 41    OFFSETDATETIME -> DATE TIME
Rule 42    LOCALDATETIME -> DATE TIME
Rule 43    LOCALDATE -> DATE
Rule 44    LOCALTIME -> TIME
Rule 45    VALUE -> FLOAT
Rule 46    STRING -> MULTILINEBASICSTRING
Rule 47    STRING -> BASICSTRING
Rule 48    STRING -> MLLITERALSTRING
Rule 49    STRING -> LITERALSTRING
Rule 50    BASICSTRING -> ASPA BC ASPA
Rule 51    BC -> BASICCHAR BC
Rule 52    BC -> <empty>
Rule 53    BASICCHAR -> BASICUNESCAPED
Rule 54    BASICCHAR -> ESCAPED
Rule 55    BASICUNESCAPED -> WHITESPACE
Rule 56    BASICUNESCAPED -> CHAR
Rule 57    BASICUNESCAPED -> INTEGER
Rule 58    BASICUNESCAPED -> MINUS
Rule 59    BASICUNESCAPED -> APOSTROFE
Rule 60    BASICUNESCAPED -> ESCAPED
Rule 61    BASICUNESCAPED -> DOT_SEP
Rule 62    ESCAPED -> ESC_QUOTE
Rule 63    ESCAPED -> ESC_REVERSE
Rule 64    ESCAPED -> ESC_BACKSPACE
Rule 65    ESCAPED -> ESC_FF
Rule 66    ESCAPED -> ESC_NL
Rule 67    ESCAPED -> ESC_CRETURN
Rule 68    ESCAPED -> ESC_TAB
Rule 69    ESCAPED -> ESC_HEX4
Rule 70    ESCAPED -> ESC_HEX8
Rule 71    MULTILINEBASICSTRING -> MLBCSTRDELIM MLNL MLBASICBODY MLBCSTRDELIM
Rule 72    MLNL -> NEWLINE
Rule 73    MLNL -> <empty>
Rule 74    MLBCSTRDELIM -> ASPA ASPA ASPA
Rule 75    MLBASICBODY -> MLBC
Rule 76    MLBC -> MLBCONTENT MLBC
Rule 77    MLBC -> <empty>
Rule 78    MLBQC -> MLBQUOTES MLBCONTENT MLBC2 MLBQC
Rule 79    MLBQC -> <empty>
Rule 80    MLBC2 -> MLBCONTENT MLBC2
Rule 81    MLBC2 -> <empty>
Rule 82    MLQ -> MLBQUOTES
Rule 83    MLQ -> <empty>
Rule 84    MLBCONTENT -> MLBCHAR
Rule 85    MLBCONTENT -> NEWLINE
Rule 86    MLBCONTENT -> MLBESCAPEDNL
Rule 87    MLBCHAR -> MLBUNESCAPED
Rule 88    MLBCHAR -> ESCAPED
Rule 89    MLBQUOTES -> ASPA
Rule 90    MLBQUOTES -> ASPA ASPA
Rule 91    MLBUNESCAPED -> WHITESPACE
Rule 92    MLBUNESCAPED -> CHAR
Rule 93    MLBESCAPEDNL -> ESCAPE NEWLINE WHNL
Rule 94    WHNL -> SPACENEWLINE WHNL
Rule 95    WHNL -> <empty>
Rule 96    SPACENEWLINE -> WHITESPACE
Rule 97    SPACENEWLINE -> NEWLINE
Rule 98    LITERALSTRING -> APOSTROFE LCH APOSTROFE
Rule 99    LCH -> LITERALCHAR LCH
Rule 100   LCH -> <empty>
Rule 101   LITERALCHAR -> CHAR
Rule 102   LITERALCHAR -> ESCAPED
Rule 103   LITERALCHAR -> WHITESPACE
Rule 104   MLLITERALSTRING -> MLLITERALSTRINGDELIM NLR MLLITERALBODY MLLITERALSTRINGDELIM
Rule 105   NLR -> NEWLINE
Rule 106   NLR -> <empty>
Rule 107   MLLITERALSTRINGDELIM -> APOSTROFE APOSTROFE APOSTROFE
Rule 108   MLLITERALBODY -> MLLC
Rule 109   MLLC -> MLLCONTENT MLLC
Rule 110   MLLC -> <empty>
Rule 111   MLLCONTENT -> MLLCHAR
Rule 112   MLLCONTENT -> NEWLINE
Rule 113   MLLCHAR -> CHAR
Rule 114   MLLCHAR -> DOT_SEP
Rule 115   MLLCHAR -> WHITESPACE
Rule 116   ARRAY -> APR ARRAYVALUES WSCOMMENTNEWLINE FPR
Rule 117   ARRAYVALUES -> <empty>
Rule 118   ARRAYVALUES -> WSCOMMENTNEWLINE VALUE ARRAYCONTEUDO
Rule 119   ARRAYCONTEUDO -> <empty>
Rule 120   ARRAYCONTEUDO -> WSCOMMENTNEWLINE VIRGULA ARRAYVALUES
Rule 121   WSCOMMENTNEWLINE -> <empty>
Rule 122   WSCOMMENTNEWLINE -> INNERCOMMENT WSCOMMENTNEWLINE
Rule 123   INNERCOMMENT -> WHITESPACE
Rule 124   INNERCOMMENT -> COMMENTOUNAO NEWLINE
Rule 125   COMMENTOUNAO -> COMMENT
Rule 126   COMMENTOUNAO -> <empty>
Rule 127   TABLE -> APR KEY FPR

Terminals, with rules where they appear

ACH                  : 
APOSTROFE            : 59 98 98 107 107 107
APR                  : 116 127
ASPA                 : 50 50 74 74 74 89 90 90
ATC                  : 
ATO                  : 
BIN                  : 
BOOLEAN              : 33
CHAR                 : 23 56 92 101 113
COMMENT              : 10 125
DATE                 : 41 42 43
DOT_SEP              : 29 30 61 114
ESCAPE               : 93
ESC_BACKSPACE        : 64
ESC_CRETURN          : 67
ESC_FF               : 65
ESC_HEX4             : 69
ESC_HEX8             : 70
ESC_NL               : 66
ESC_QUOTE            : 62
ESC_REVERSE          : 63
ESC_TAB              : 68
FCH                  : 
FLOAT                : 45
FPR                  : 116 127
HEX                  : 
IGUAL                : 13
INF                  : 
INTEGER              : 24 34 57
MINUS                : 25 58
NAN                  : 
NEWLINE              : 11 72 85 93 97 105 112 124
OCT                  : 
PLUS                 : 
TIME                 : 41 42 44
TIME_DELIM           : 
TWODOT_SEP           : 
UNDERSC0RE           : 
UNDERSCORE           : 26
VIRGULA              : 120
WHITESPACE           : 14 55 91 96 103 115 123
error                : 

Nonterminals, with rules where they appear

ARRAY                : 35
ARRAYCONTEUDO        : 118
ARRAYVALUES          : 116 120
ATRIBUICOES          : 6 8
BASICCHAR            : 51
BASICSTRING          : 27 47
BASICUNESCAPED       : 53
BC                   : 50 51
COMMENTOUNAO         : 124
DATETIME             : 36
DOTKEY               : 17
DOTSIMPKEY           : 29 30
ESCAPED              : 54 60 88 102
EXPRESSION           : 2 4 6 8 10 11
GROUPS               : 1 4
INNERCOMMENT         : 122
KEY                  : 13 127
KVALUE               : 2 8
LCH                  : 98 99
LITERALCHAR          : 99
LITERALSTRING        : 28 49
LOCALDATE            : 39
LOCALDATETIME        : 38
LOCALTIME            : 40
MLBASICBODY          : 71
MLBC                 : 75 76
MLBC2                : 78 80
MLBCHAR              : 84
MLBCONTENT           : 76 78 80
MLBCSTRDELIM         : 71 71
MLBESCAPEDNL         : 86
MLBQC                : 78
MLBQUOTES            : 78 82
MLBUNESCAPED         : 87
MLLC                 : 108 109
MLLCHAR              : 111
MLLCONTENT           : 109
MLLITERALBODY        : 104
MLLITERALSTRING      : 48
MLLITERALSTRINGDELIM : 104 104
MLNL                 : 71
MLQ                  : 
MULTILINEBASICSTRING : 46
NLR                  : 104
OCCURRENCES          : 20 21
OFFSETDATETIME       : 37
QUOTEDKEY            : 18
SECCAO               : 4
SIMPLEKEY            : 16 29 29 30
SPACENEWLINE         : 94
STRING               : 32
TABLE                : 6
TITLES               : 1 2
TOML                 : 0
UNQUOTEDKEY          : 19
UNQUOTEDKEYAUX       : 20 21
VALUE                : 13 118
WHNL                 : 93 94
WSCOMMENTNEWLINE     : 116 118 120 122
kvwhitespace         : 13 13

Parsing method: LALR

state 0

    (0) S' -> . TOML
    (1) TOML -> . TITLES GROUPS
    (2) TITLES -> . KVALUE EXPRESSION TITLES
    (3) TITLES -> .
    (13) KVALUE -> . KEY kvwhitespace IGUAL kvwhitespace VALUE
    (16) KEY -> . SIMPLEKEY
    (17) KEY -> . DOTKEY
    (18) SIMPLEKEY -> . QUOTEDKEY
    (19) SIMPLEKEY -> . UNQUOTEDKEY
    (29) DOTKEY -> . SIMPLEKEY DOT_SEP SIMPLEKEY DOTSIMPKEY
    (27) QUOTEDKEY -> . BASICSTRING
    (28) QUOTEDKEY -> . LITERALSTRING
    (20) UNQUOTEDKEY -> . OCCURRENCES UNQUOTEDKEYAUX
    (50) BASICSTRING -> . ASPA BC ASPA
    (98) LITERALSTRING -> . APOSTROFE LCH APOSTROFE
    (23) OCCURRENCES -> . CHAR
    (24) OCCURRENCES -> . INTEGER
    (25) OCCURRENCES -> . MINUS
    (26) OCCURRENCES -> . UNDERSCORE

    APR             reduce using rule 3 (TITLES -> .)
    COMMENT         reduce using rule 3 (TITLES -> .)
    NEWLINE         reduce using rule 3 (TITLES -> .)
    $end            reduce using rule 3 (TITLES -> .)
    ASPA            shift and go to state 12
    APOSTROFE       shift and go to state 13
    CHAR            shift and go to state 14
    INTEGER         shift and go to state 15
    MINUS           shift and go to state 16
    UNDERSCORE      shift and go to state 17

    TOML                           shift and go to state 1
    TITLES                         shift and go to state 2
    KVALUE                         shift and go to state 3
    KEY                            shift and go to state 4
    SIMPLEKEY                      shift and go to state 5
    DOTKEY                         shift and go to state 6
    QUOTEDKEY                      shift and go to state 7
    UNQUOTEDKEY                    shift and go to state 8
    BASICSTRING                    shift and go to state 9
    LITERALSTRING                  shift and go to state 10
    OCCURRENCES                    shift and go to state 11

state 1

    (0) S' -> TOML .



state 2

    (1) TOML -> TITLES . GROUPS
    (4) GROUPS -> . SECCAO EXPRESSION GROUPS
    (5) GROUPS -> .
    (6) SECCAO -> . TABLE EXPRESSION ATRIBUICOES
    (7) SECCAO -> .
    (127) TABLE -> . APR KEY FPR

  ! reduce/reduce conflict for $end resolved using rule 5 (GROUPS -> .)
  ! shift/reduce conflict for APR resolved as shift
    $end            reduce using rule 5 (GROUPS -> .)
    COMMENT         reduce using rule 7 (SECCAO -> .)
    NEWLINE         reduce using rule 7 (SECCAO -> .)
    APR             shift and go to state 21

  ! APR             [ reduce using rule 7 (SECCAO -> .) ]
  ! $end            [ reduce using rule 7 (SECCAO -> .) ]

    GROUPS                         shift and go to state 18
    SECCAO                         shift and go to state 19
    TABLE                          shift and go to state 20

state 3

    (2) TITLES -> KVALUE . EXPRESSION TITLES
    (10) EXPRESSION -> . COMMENT EXPRESSION
    (11) EXPRESSION -> . NEWLINE EXPRESSION
    (12) EXPRESSION -> .

  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
    COMMENT         shift and go to state 23
    NEWLINE         shift and go to state 24
    ASPA            reduce using rule 12 (EXPRESSION -> .)
    APOSTROFE       reduce using rule 12 (EXPRESSION -> .)
    CHAR            reduce using rule 12 (EXPRESSION -> .)
    INTEGER         reduce using rule 12 (EXPRESSION -> .)
    MINUS           reduce using rule 12 (EXPRESSION -> .)
    UNDERSCORE      reduce using rule 12 (EXPRESSION -> .)
    APR             reduce using rule 12 (EXPRESSION -> .)
    $end            reduce using rule 12 (EXPRESSION -> .)

  ! COMMENT         [ reduce using rule 12 (EXPRESSION -> .) ]
  ! NEWLINE         [ reduce using rule 12 (EXPRESSION -> .) ]

    EXPRESSION                     shift and go to state 22

state 4

    (13) KVALUE -> KEY . kvwhitespace IGUAL kvwhitespace VALUE
    (14) kvwhitespace -> . WHITESPACE
    (15) kvwhitespace -> .

    WHITESPACE      shift and go to state 26
    IGUAL           reduce using rule 15 (kvwhitespace -> .)

    kvwhitespace                   shift and go to state 25

state 5

    (16) KEY -> SIMPLEKEY .
    (29) DOTKEY -> SIMPLEKEY . DOT_SEP SIMPLEKEY DOTSIMPKEY

    WHITESPACE      reduce using rule 16 (KEY -> SIMPLEKEY .)
    IGUAL           reduce using rule 16 (KEY -> SIMPLEKEY .)
    FPR             reduce using rule 16 (KEY -> SIMPLEKEY .)
    DOT_SEP         shift and go to state 27


state 6

    (17) KEY -> DOTKEY .

    WHITESPACE      reduce using rule 17 (KEY -> DOTKEY .)
    IGUAL           reduce using rule 17 (KEY -> DOTKEY .)
    FPR             reduce using rule 17 (KEY -> DOTKEY .)


state 7

    (18) SIMPLEKEY -> QUOTEDKEY .

    DOT_SEP         reduce using rule 18 (SIMPLEKEY -> QUOTEDKEY .)
    WHITESPACE      reduce using rule 18 (SIMPLEKEY -> QUOTEDKEY .)
    IGUAL           reduce using rule 18 (SIMPLEKEY -> QUOTEDKEY .)
    FPR             reduce using rule 18 (SIMPLEKEY -> QUOTEDKEY .)


state 8

    (19) SIMPLEKEY -> UNQUOTEDKEY .

    DOT_SEP         reduce using rule 19 (SIMPLEKEY -> UNQUOTEDKEY .)
    WHITESPACE      reduce using rule 19 (SIMPLEKEY -> UNQUOTEDKEY .)
    IGUAL           reduce using rule 19 (SIMPLEKEY -> UNQUOTEDKEY .)
    FPR             reduce using rule 19 (SIMPLEKEY -> UNQUOTEDKEY .)


state 9

    (27) QUOTEDKEY -> BASICSTRING .

    DOT_SEP         reduce using rule 27 (QUOTEDKEY -> BASICSTRING .)
    WHITESPACE      reduce using rule 27 (QUOTEDKEY -> BASICSTRING .)
    IGUAL           reduce using rule 27 (QUOTEDKEY -> BASICSTRING .)
    FPR             reduce using rule 27 (QUOTEDKEY -> BASICSTRING .)


state 10

    (28) QUOTEDKEY -> LITERALSTRING .

    DOT_SEP         reduce using rule 28 (QUOTEDKEY -> LITERALSTRING .)
    WHITESPACE      reduce using rule 28 (QUOTEDKEY -> LITERALSTRING .)
    IGUAL           reduce using rule 28 (QUOTEDKEY -> LITERALSTRING .)
    FPR             reduce using rule 28 (QUOTEDKEY -> LITERALSTRING .)


state 11

    (20) UNQUOTEDKEY -> OCCURRENCES . UNQUOTEDKEYAUX
    (21) UNQUOTEDKEYAUX -> . OCCURRENCES UNQUOTEDKEYAUX
    (22) UNQUOTEDKEYAUX -> .
    (23) OCCURRENCES -> . CHAR
    (24) OCCURRENCES -> . INTEGER
    (25) OCCURRENCES -> . MINUS
    (26) OCCURRENCES -> . UNDERSCORE

    DOT_SEP         reduce using rule 22 (UNQUOTEDKEYAUX -> .)
    WHITESPACE      reduce using rule 22 (UNQUOTEDKEYAUX -> .)
    IGUAL           reduce using rule 22 (UNQUOTEDKEYAUX -> .)
    FPR             reduce using rule 22 (UNQUOTEDKEYAUX -> .)
    CHAR            shift and go to state 14
    INTEGER         shift and go to state 15
    MINUS           shift and go to state 16
    UNDERSCORE      shift and go to state 17

    OCCURRENCES                    shift and go to state 28
    UNQUOTEDKEYAUX                 shift and go to state 29

state 12

    (50) BASICSTRING -> ASPA . BC ASPA
    (51) BC -> . BASICCHAR BC
    (52) BC -> .
    (53) BASICCHAR -> . BASICUNESCAPED
    (54) BASICCHAR -> . ESCAPED
    (55) BASICUNESCAPED -> . WHITESPACE
    (56) BASICUNESCAPED -> . CHAR
    (57) BASICUNESCAPED -> . INTEGER
    (58) BASICUNESCAPED -> . MINUS
    (59) BASICUNESCAPED -> . APOSTROFE
    (60) BASICUNESCAPED -> . ESCAPED
    (61) BASICUNESCAPED -> . DOT_SEP
    (62) ESCAPED -> . ESC_QUOTE
    (63) ESCAPED -> . ESC_REVERSE
    (64) ESCAPED -> . ESC_BACKSPACE
    (65) ESCAPED -> . ESC_FF
    (66) ESCAPED -> . ESC_NL
    (67) ESCAPED -> . ESC_CRETURN
    (68) ESCAPED -> . ESC_TAB
    (69) ESCAPED -> . ESC_HEX4
    (70) ESCAPED -> . ESC_HEX8

    ASPA            reduce using rule 52 (BC -> .)
    WHITESPACE      shift and go to state 34
    CHAR            shift and go to state 35
    INTEGER         shift and go to state 36
    MINUS           shift and go to state 37
    APOSTROFE       shift and go to state 38
    DOT_SEP         shift and go to state 39
    ESC_QUOTE       shift and go to state 40
    ESC_REVERSE     shift and go to state 41
    ESC_BACKSPACE   shift and go to state 42
    ESC_FF          shift and go to state 43
    ESC_NL          shift and go to state 44
    ESC_CRETURN     shift and go to state 45
    ESC_TAB         shift and go to state 46
    ESC_HEX4        shift and go to state 47
    ESC_HEX8        shift and go to state 48

    BC                             shift and go to state 30
    BASICCHAR                      shift and go to state 31
    BASICUNESCAPED                 shift and go to state 32
    ESCAPED                        shift and go to state 33

state 13

    (98) LITERALSTRING -> APOSTROFE . LCH APOSTROFE
    (99) LCH -> . LITERALCHAR LCH
    (100) LCH -> .
    (101) LITERALCHAR -> . CHAR
    (102) LITERALCHAR -> . ESCAPED
    (103) LITERALCHAR -> . WHITESPACE
    (62) ESCAPED -> . ESC_QUOTE
    (63) ESCAPED -> . ESC_REVERSE
    (64) ESCAPED -> . ESC_BACKSPACE
    (65) ESCAPED -> . ESC_FF
    (66) ESCAPED -> . ESC_NL
    (67) ESCAPED -> . ESC_CRETURN
    (68) ESCAPED -> . ESC_TAB
    (69) ESCAPED -> . ESC_HEX4
    (70) ESCAPED -> . ESC_HEX8

    APOSTROFE       reduce using rule 100 (LCH -> .)
    CHAR            shift and go to state 51
    WHITESPACE      shift and go to state 53
    ESC_QUOTE       shift and go to state 40
    ESC_REVERSE     shift and go to state 41
    ESC_BACKSPACE   shift and go to state 42
    ESC_FF          shift and go to state 43
    ESC_NL          shift and go to state 44
    ESC_CRETURN     shift and go to state 45
    ESC_TAB         shift and go to state 46
    ESC_HEX4        shift and go to state 47
    ESC_HEX8        shift and go to state 48

    LCH                            shift and go to state 49
    LITERALCHAR                    shift and go to state 50
    ESCAPED                        shift and go to state 52

state 14

    (23) OCCURRENCES -> CHAR .

    CHAR            reduce using rule 23 (OCCURRENCES -> CHAR .)
    INTEGER         reduce using rule 23 (OCCURRENCES -> CHAR .)
    MINUS           reduce using rule 23 (OCCURRENCES -> CHAR .)
    UNDERSCORE      reduce using rule 23 (OCCURRENCES -> CHAR .)
    DOT_SEP         reduce using rule 23 (OCCURRENCES -> CHAR .)
    WHITESPACE      reduce using rule 23 (OCCURRENCES -> CHAR .)
    IGUAL           reduce using rule 23 (OCCURRENCES -> CHAR .)
    FPR             reduce using rule 23 (OCCURRENCES -> CHAR .)


state 15

    (24) OCCURRENCES -> INTEGER .

    CHAR            reduce using rule 24 (OCCURRENCES -> INTEGER .)
    INTEGER         reduce using rule 24 (OCCURRENCES -> INTEGER .)
    MINUS           reduce using rule 24 (OCCURRENCES -> INTEGER .)
    UNDERSCORE      reduce using rule 24 (OCCURRENCES -> INTEGER .)
    DOT_SEP         reduce using rule 24 (OCCURRENCES -> INTEGER .)
    WHITESPACE      reduce using rule 24 (OCCURRENCES -> INTEGER .)
    IGUAL           reduce using rule 24 (OCCURRENCES -> INTEGER .)
    FPR             reduce using rule 24 (OCCURRENCES -> INTEGER .)


state 16

    (25) OCCURRENCES -> MINUS .

    CHAR            reduce using rule 25 (OCCURRENCES -> MINUS .)
    INTEGER         reduce using rule 25 (OCCURRENCES -> MINUS .)
    MINUS           reduce using rule 25 (OCCURRENCES -> MINUS .)
    UNDERSCORE      reduce using rule 25 (OCCURRENCES -> MINUS .)
    DOT_SEP         reduce using rule 25 (OCCURRENCES -> MINUS .)
    WHITESPACE      reduce using rule 25 (OCCURRENCES -> MINUS .)
    IGUAL           reduce using rule 25 (OCCURRENCES -> MINUS .)
    FPR             reduce using rule 25 (OCCURRENCES -> MINUS .)


state 17

    (26) OCCURRENCES -> UNDERSCORE .

    CHAR            reduce using rule 26 (OCCURRENCES -> UNDERSCORE .)
    INTEGER         reduce using rule 26 (OCCURRENCES -> UNDERSCORE .)
    MINUS           reduce using rule 26 (OCCURRENCES -> UNDERSCORE .)
    UNDERSCORE      reduce using rule 26 (OCCURRENCES -> UNDERSCORE .)
    DOT_SEP         reduce using rule 26 (OCCURRENCES -> UNDERSCORE .)
    WHITESPACE      reduce using rule 26 (OCCURRENCES -> UNDERSCORE .)
    IGUAL           reduce using rule 26 (OCCURRENCES -> UNDERSCORE .)
    FPR             reduce using rule 26 (OCCURRENCES -> UNDERSCORE .)


state 18

    (1) TOML -> TITLES GROUPS .

    $end            reduce using rule 1 (TOML -> TITLES GROUPS .)


state 19

    (4) GROUPS -> SECCAO . EXPRESSION GROUPS
    (10) EXPRESSION -> . COMMENT EXPRESSION
    (11) EXPRESSION -> . NEWLINE EXPRESSION
    (12) EXPRESSION -> .

  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
    COMMENT         shift and go to state 23
    NEWLINE         shift and go to state 24
    APR             reduce using rule 12 (EXPRESSION -> .)
    $end            reduce using rule 12 (EXPRESSION -> .)

  ! COMMENT         [ reduce using rule 12 (EXPRESSION -> .) ]
  ! NEWLINE         [ reduce using rule 12 (EXPRESSION -> .) ]

    EXPRESSION                     shift and go to state 54

state 20

    (6) SECCAO -> TABLE . EXPRESSION ATRIBUICOES
    (10) EXPRESSION -> . COMMENT EXPRESSION
    (11) EXPRESSION -> . NEWLINE EXPRESSION
    (12) EXPRESSION -> .

  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
    COMMENT         shift and go to state 23
    NEWLINE         shift and go to state 24
    ASPA            reduce using rule 12 (EXPRESSION -> .)
    APOSTROFE       reduce using rule 12 (EXPRESSION -> .)
    CHAR            reduce using rule 12 (EXPRESSION -> .)
    INTEGER         reduce using rule 12 (EXPRESSION -> .)
    MINUS           reduce using rule 12 (EXPRESSION -> .)
    UNDERSCORE      reduce using rule 12 (EXPRESSION -> .)
    APR             reduce using rule 12 (EXPRESSION -> .)
    $end            reduce using rule 12 (EXPRESSION -> .)

  ! COMMENT         [ reduce using rule 12 (EXPRESSION -> .) ]
  ! NEWLINE         [ reduce using rule 12 (EXPRESSION -> .) ]

    EXPRESSION                     shift and go to state 55

state 21

    (127) TABLE -> APR . KEY FPR
    (16) KEY -> . SIMPLEKEY
    (17) KEY -> . DOTKEY
    (18) SIMPLEKEY -> . QUOTEDKEY
    (19) SIMPLEKEY -> . UNQUOTEDKEY
    (29) DOTKEY -> . SIMPLEKEY DOT_SEP SIMPLEKEY DOTSIMPKEY
    (27) QUOTEDKEY -> . BASICSTRING
    (28) QUOTEDKEY -> . LITERALSTRING
    (20) UNQUOTEDKEY -> . OCCURRENCES UNQUOTEDKEYAUX
    (50) BASICSTRING -> . ASPA BC ASPA
    (98) LITERALSTRING -> . APOSTROFE LCH APOSTROFE
    (23) OCCURRENCES -> . CHAR
    (24) OCCURRENCES -> . INTEGER
    (25) OCCURRENCES -> . MINUS
    (26) OCCURRENCES -> . UNDERSCORE

    ASPA            shift and go to state 12
    APOSTROFE       shift and go to state 13
    CHAR            shift and go to state 14
    INTEGER         shift and go to state 15
    MINUS           shift and go to state 16
    UNDERSCORE      shift and go to state 17

    KEY                            shift and go to state 56
    SIMPLEKEY                      shift and go to state 5
    DOTKEY                         shift and go to state 6
    QUOTEDKEY                      shift and go to state 7
    UNQUOTEDKEY                    shift and go to state 8
    BASICSTRING                    shift and go to state 9
    LITERALSTRING                  shift and go to state 10
    OCCURRENCES                    shift and go to state 11

state 22

    (2) TITLES -> KVALUE EXPRESSION . TITLES
    (2) TITLES -> . KVALUE EXPRESSION TITLES
    (3) TITLES -> .
    (13) KVALUE -> . KEY kvwhitespace IGUAL kvwhitespace VALUE
    (16) KEY -> . SIMPLEKEY
    (17) KEY -> . DOTKEY
    (18) SIMPLEKEY -> . QUOTEDKEY
    (19) SIMPLEKEY -> . UNQUOTEDKEY
    (29) DOTKEY -> . SIMPLEKEY DOT_SEP SIMPLEKEY DOTSIMPKEY
    (27) QUOTEDKEY -> . BASICSTRING
    (28) QUOTEDKEY -> . LITERALSTRING
    (20) UNQUOTEDKEY -> . OCCURRENCES UNQUOTEDKEYAUX
    (50) BASICSTRING -> . ASPA BC ASPA
    (98) LITERALSTRING -> . APOSTROFE LCH APOSTROFE
    (23) OCCURRENCES -> . CHAR
    (24) OCCURRENCES -> . INTEGER
    (25) OCCURRENCES -> . MINUS
    (26) OCCURRENCES -> . UNDERSCORE

    APR             reduce using rule 3 (TITLES -> .)
    COMMENT         reduce using rule 3 (TITLES -> .)
    NEWLINE         reduce using rule 3 (TITLES -> .)
    $end            reduce using rule 3 (TITLES -> .)
    ASPA            shift and go to state 12
    APOSTROFE       shift and go to state 13
    CHAR            shift and go to state 14
    INTEGER         shift and go to state 15
    MINUS           shift and go to state 16
    UNDERSCORE      shift and go to state 17

    KVALUE                         shift and go to state 3
    TITLES                         shift and go to state 57
    KEY                            shift and go to state 4
    SIMPLEKEY                      shift and go to state 5
    DOTKEY                         shift and go to state 6
    QUOTEDKEY                      shift and go to state 7
    UNQUOTEDKEY                    shift and go to state 8
    BASICSTRING                    shift and go to state 9
    LITERALSTRING                  shift and go to state 10
    OCCURRENCES                    shift and go to state 11

state 23

    (10) EXPRESSION -> COMMENT . EXPRESSION
    (10) EXPRESSION -> . COMMENT EXPRESSION
    (11) EXPRESSION -> . NEWLINE EXPRESSION
    (12) EXPRESSION -> .

  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
    COMMENT         shift and go to state 23
    NEWLINE         shift and go to state 24
    ASPA            reduce using rule 12 (EXPRESSION -> .)
    APOSTROFE       reduce using rule 12 (EXPRESSION -> .)
    CHAR            reduce using rule 12 (EXPRESSION -> .)
    INTEGER         reduce using rule 12 (EXPRESSION -> .)
    MINUS           reduce using rule 12 (EXPRESSION -> .)
    UNDERSCORE      reduce using rule 12 (EXPRESSION -> .)
    APR             reduce using rule 12 (EXPRESSION -> .)
    $end            reduce using rule 12 (EXPRESSION -> .)

  ! COMMENT         [ reduce using rule 12 (EXPRESSION -> .) ]
  ! NEWLINE         [ reduce using rule 12 (EXPRESSION -> .) ]

    EXPRESSION                     shift and go to state 58

state 24

    (11) EXPRESSION -> NEWLINE . EXPRESSION
    (10) EXPRESSION -> . COMMENT EXPRESSION
    (11) EXPRESSION -> . NEWLINE EXPRESSION
    (12) EXPRESSION -> .

  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
    COMMENT         shift and go to state 23
    NEWLINE         shift and go to state 24
    ASPA            reduce using rule 12 (EXPRESSION -> .)
    APOSTROFE       reduce using rule 12 (EXPRESSION -> .)
    CHAR            reduce using rule 12 (EXPRESSION -> .)
    INTEGER         reduce using rule 12 (EXPRESSION -> .)
    MINUS           reduce using rule 12 (EXPRESSION -> .)
    UNDERSCORE      reduce using rule 12 (EXPRESSION -> .)
    APR             reduce using rule 12 (EXPRESSION -> .)
    $end            reduce using rule 12 (EXPRESSION -> .)

  ! COMMENT         [ reduce using rule 12 (EXPRESSION -> .) ]
  ! NEWLINE         [ reduce using rule 12 (EXPRESSION -> .) ]

    EXPRESSION                     shift and go to state 59

state 25

    (13) KVALUE -> KEY kvwhitespace . IGUAL kvwhitespace VALUE
